--- a/src/renderer/components/awsome-titlebar/index.less
+++ b/src/renderer/components/awsome-titlebar/index.less
@@ -1,25 +1,37 @@
-.theme-dark {
-    color: white;
-    background: #21252b;
+@theme-dark-bg-color: #21252b;
+@theme-dark-text-color: white;
+@theme-dark-active-bg-color: #333842;
+@theme-dark-active-select-bg-color: #252830;
 
-    .awesome-menu-item, .windows-control-item {
+@theme-light-bg-color: white;
+@theme-light-text-color: black;
+@theme-light-active-bg-color: rgb(212, 212, 212);
+@theme-light-active-select-bg-color: white;
+
+.theme-dark {
+    color: @theme-dark-text-color;
+    background: @theme-dark-bg-color;
+
+    .awesome-menu-item,
+    .windows-control-item {
 
         &:hover,
         &:focus {
-            background: #333842;
+            background: @theme-dark-active-bg-color;
         }
     }
 }
 
 .theme-light {
-    color: black;
-    background: white;
+    color: @theme-light-text-color;
+    background: @theme-light-bg-color;
 
-    .awesome-menu-item, .windows-control-item {
+    .awesome-menu-item,
+    .windows-control-item {
 
         &:hover,
         &:focus {
-            background: gray;
+            background: @theme-light-active-bg-color;
         }
     }
 }
@@ -29,20 +41,25 @@
 
     .ant-dropdown-menu {
         min-width: 120px;
-        background: #333842;
+        background: @theme-dark-active-bg-color;
 
         .ant-dropdown-menu-submenu-open {
-            background: #99a5be;
+            background: @theme-dark-active-select-bg-color;
         }
 
         .ant-dropdown-menu-item,
         .ant-dropdown-menu-submenu-title {
             font-size: 12px;
             padding: 2px 10px;
-            color: white;
+            color: @theme-dark-text-color;
 
             &:hover {
-                background: #99a5be;
+                background: @theme-dark-active-select-bg-color;
+            }
+
+            .windows-icon {
+                float: right;
+                margin-left: 60px;
             }
         }
     }
@@ -54,24 +71,25 @@
     .ant-dropdown-menu {
         margin: 0;
         min-width: 120px;
-        background: #333842;
+        background: @theme-dark-active-bg-color;
 
         .ant-dropdown-menu-submenu-open {
-            background: #99a5be;
+            background: @theme-dark-active-select-bg-color;
         }
 
         .ant-dropdown-menu-item,
         .ant-dropdown-menu-submenu-title {
             font-size: 12px;
             padding: 0px 10px;
-            color: white;
+            color: @theme-dark-text-color;
 
             &:hover {
-                background: #99a5be;
+                background: @theme-dark-active-select-bg-color;
             }
 
             .windows-icon {
                 float: right;
+                margin-left: 60px;
             }
         }
     }
@@ -82,20 +100,25 @@
 
     .ant-dropdown-menu {
         min-width: 120px;
-        background: white;
+        background: @theme-light-active-bg-color;
 
         .ant-dropdown-menu-submenu-open {
-            background: #e4e7ec;
+            background: @theme-light-active-select-bg-color;
         }
 
         .ant-dropdown-menu-item,
         .ant-dropdown-menu-submenu-title {
             font-size: 12px;
             padding: 2px 10px;
-            color: black;
+            color: @theme-light-text-color;
 
             &:hover {
-                background: #e4e7ec;
+                background: @theme-light-active-select-bg-color;
+            }
+
+            .windows-icon {
+                float: right;
+                margin-left: 60px;
             }
         }
     }
@@ -107,24 +130,25 @@
     .ant-dropdown-menu {
         margin: 0;
         min-width: 120px;
-        background: white;
+        background: @theme-light-active-bg-color;
 
         .ant-dropdown-menu-submenu-open {
-            background: #e4e7ec;
+            background: @theme-light-active-select-bg-color;
         }
 
         .ant-dropdown-menu-item,
         .ant-dropdown-menu-submenu-title {
             font-size: 12px;
             padding: 0px 10px;
-            color: black;
+            color: @theme-light-text-color;
 
             &:hover {
-                background: #e4e7ec;
+                background: @theme-light-active-select-bg-color;
             }
 
             .windows-icon {
                 float: right;
+                margin-left: 60px;
             }
         }
     }
@@ -139,19 +163,18 @@
     -webkit-app-region: drag;
 
     .awesome-menu {
-        width: 200px;
         display: flex;
         white-space: nowrap;
-        height: 100%;
         -webkit-app-region: no-drag;
 
-        .awesome-menu-item {
-            cursor: default;
+        .awesome-menu-item, .awesome-menu-icon {
             padding: 0 10px;
             display: flex;
-            height: 100%;
             justify-content: center;
             align-items: center;
+        }
+        .awesome-menu-icon {
+            -webkit-app-region: drag;
         }
     }
 
@@ -159,6 +182,7 @@
         display: flex;
         font-size: 16px;
         -webkit-app-region: no-drag;
+
         .windows-control-item {
             padding: 0 10px;
             display: flex;
